--- a/UdemyCoffeeShop/UdemyCoffeeShop.csproj
+++ b/UdemyCoffeeShop/UdemyCoffeeShop.csproj
@@ -43,8 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CoffeeAttendent.cs" />
+    <Compile Include="Customer.cs" />
+    <Compile Include="CustomerFactory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WaitingCustomer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
